--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "allowJs": true,
     // определяет то какими будут импорты (node в 99% или classic)
     "moduleResolution": "node",
+    "baseUrl": ".",
     // esModuleInterop позволяет работать с пакетами, которые используют common js как с обычными пакетами
     // с помощью (import require() module.export) = common js, т.е. использовать обычные import и export
     // Пример import Moment from 'moment:
