--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,8 @@
     // версия в которую будет компилироваться
     "target": "es5",
     // чтобы можно было писать стандартные конструкции в react
-    "jsx": "react",
-    // позволяет компилятору обрабатывать не только ts, но и js
+    "jsx": "react-jsx",
+    // позволяет компилят€ору обрабатывать не только ts, но и js
     "allowJs": true,
     // определяет то какими будут импорты (node в 99% или classic)
     "moduleResolution": "node",
