6. add Lazy and Suspense

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,9 @@
     "outDir": "./dist/",
     // не позволяет использовать переменные без указания типа, т.е. если any - нужно явно указать
     "noImplicitAny": true,
-    // модульная система
-    "module": "es6",
+    // модульная системаj
+    // "module": "es6",
+    "module": "ESNext",
     // версия в которую будет компилироваться
     "target": "es5",
     // чтобы можно было писать стандартные конструкции в react
