--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/webpack-bundle-analyzer": "^4.4.1",
     "@types/webpack-dev-server": "^4.7.2",
     "babel-loader": "^8.2.3",
+    "babel-plugin-named-exports-order": "^0.0.2",
     "css-loader": "^6.6.0",
     "eslint": "^8.39.0",
     "eslint-plugin-i18next": "^5.1.2",
@@ -53,6 +54,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "mini-css-extract-plugin": "^2.5.3",
+    "prop-types": "^15.8.1",
     "react-refresh": "^0.12.0",
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.49.9",
@@ -63,7 +65,7 @@
     "ts-loader": "^9.2.6",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
-    "webpack": "^5.69.1",
+    "webpack": "^5.88.2",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
@@ -84,5 +86,33 @@
     "react-i18next": "^11.15.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.1"
+  },
+  "resolutions": {
+    "@storybook/react@npm:9.5.0/webpack": "^5.69.1",
+    "@storybook/react/webpack": "^5",
+    "@storybook/core-common/webpack": "^5",
+    "@storybook/core-server/webpack": "^5",
+    "@storybook/builder-webpack4/webpack": "^5",
+    "@storybook/manager-webpack4/webpack": "^5"
+  },
+  "eslintConfig": {
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      },
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
+    ]
   }
 }
