--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,8 +2,6 @@
   "extends": "stylelint-config-standard-scss",
   "rules": {
     "indentation": [4],
-    "selector-class-pattern": null,
-    "scss/comment-no-empty": null,
-    "ignoreFiles": ["build/css/**.css"]
+    "selector-class-pattern": null
   }
 }
