--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "outDir": "./dist/",
     // не позволяет использовать переменные без указания типа, т.е. если any - нужно явно указать
     "noImplicitAny": true,
-    // модульная системаj
+    // модульная система
     // "module": "es6",
     "module": "ESNext",
     // версия в которую будет компилироваться
