--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "test:ui:ci": "npx loki --requireReference --reactUri file:./storybook-static",
     "installsb": "npx sb@6.4.19 init -f",
     "storybook": "start-storybook -p 6006 -c ./config/storybook",
-    "storybook:build": "build-storybook -c ./config/storybook"
+    "storybook:build": "build-storybook -c ./config/storybook",
+    "visual:report": "npm-run-all visual:report:*",
+    "visual:report:json": "node scripts/generate-visual-json-report.js",
+    "visual:report:html": "reg-cli --from .loki/report.json --report .loki/report.html"
   },
   "keywords": [],
   "author": "",
@@ -60,6 +63,7 @@
     "mini-css-extract-plugin": "^2.5.3",
     "prop-types": "^15.8.1",
     "react-refresh": "^0.12.0",
+    "reg-cli": "^0.17.6",
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
