--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "storybook:build": "build-storybook -c ./config/storybook",
     "visual:report": "npm-run-all visual:report:*",
     "visual:report:json": "node scripts/generate-visual-json-report.js",
-    "visual:report:html": "reg-cli --from .loki/report.json --report .loki/report.html"
+    "visual:report:html": "reg-cli --from .loki/report.json --report .loki/report.html",
+    "loki:update": "npx loki update",
+    "loki:approve": "npx loki approve"
   },
   "keywords": [],
   "author": "",
